--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <link rel="stylesheet" href="css/bootstrap-grid.css" type="text/css">
-  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="bootstrap-grid.css" type="text/css">
+  <link rel="stylesheet" href="styles.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Inknut+Antiqua:wght@600&display=swap" rel="stylesheet">
 </head>
 
@@ -40,7 +40,7 @@
         <!-- right column -->
         <div class="col-sm">
           <figure>
-            <img src="img/jane.jpg" class="intro-img" alt="image of me">
+            <img src="jane.jpg" class="intro-img" alt="image of me">
           </figure>
         </div>
       </div>
@@ -63,7 +63,7 @@
         <!-- left column -->
         <div class="col-sm">
           <figure>
-            <img src="img/cosmetics.jpg" alt="cosmetics">
+            <img src="cosmetics.jpg" alt="cosmetics">
             <figcaption class="right-alignment">The Honest Company On Unsplash</figcaption>
           </figure>
         </div>
@@ -99,7 +99,7 @@
         <!-- right column -->
         <div class="col-sm">
         <figure>
-            <img src="img/dashboard-app.jpg" alt="dashboard app">
+            <img src="dashboard-app.jpg" alt="dashboard app">
             <figcaption>Photo by José Alejandro Cuffia on Unsplash</figcaption>
         </figure>
       </div>
@@ -113,7 +113,7 @@
         <!-- left column -->
         <div class="col-sm">
           <figure>
-            <img src="img/iPad-app.jpg" alt="iPad app">
+            <img src="iPad-app.jpg" alt="iPad app">
             <figcaption class="right-alignment">Photo by Marek Levák on Unsplash</figcaption>
           </figure>
         </div>
