--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <!-- left column -->
         <div class="col-sm">
           <figure>
-            <img src="iPad-app.jpg" alt="iPad app">
+            <img src="ipad-app.jpg" alt="iPad app">
             <figcaption class="right-alignment">Photo by Marek Levák on Unsplash</figcaption>
           </figure>
         </div>
